More and more and more formatting

--- a/pages/1261.qmd
+++ b/pages/1261.qmd
@@ -2,10 +2,9 @@
 title: "Salmon Marine Interactions - SMI - COE Section"
 description: "No description available."
 author: "Chrys Neville, Michelle Charbonneau"
-keywords: ["salmon science", "Unspecified", "Uncategorized", "Ecosystem Sciences (ESD)", "Regional Ecosystems Effects on Fish and Fisheries"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Chrys Neville, Michelle Charbonneau  
 **Division:** Ecosystem Sciences (ESD)  
