--- a/pages/2406.qmd
+++ b/pages/2406.qmd
@@ -2,10 +2,9 @@
 title: "Changing coastal productivity: Using sediment cores, water properties and archived plankton data to identify changes at the bottom of the food web in BC’s coastal waters"
 description: "Has climate change reduced the amount of plankton at the bottom of the food web in BC waters, reducing the carrying capacity for salmon? Have smaller phytoplankton replaced diatoms, lengthening the food chain and making food less nutritious for salmon? This study uses chemical markers in sediment cores and water samples to investigate food web changes in BC coastal inlets."
 author: "Sophia Johannessen"
-keywords: ["salmon science", "1-Conservation and stewardship", "Salmon in a changing climate", "Ocean Sciences (OSD)", "Ecology and Biogeochemistry"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Sophia Johannessen  
 **Division:** Ocean Sciences (OSD)  
