--- a/pages/2424.qmd
+++ b/pages/2424.qmd
@@ -2,10 +2,9 @@
 title: "Mechanistic modelling to link hydrology to juvenile salmon habitat quality and productivity"
 description: "Predicting how much water fish need is a key management challenge in the face of climate change and increased water demand. Hydraulic habitat models are widely used for instream flow management, but do not currently account for dynamic water temperature. This project leverages large-scale flow and temperature monitoring across the North Thompson to develop flow-habitat models for juvenile coho, which incorporate dynamic temperatures and habitat structure."
 author: "Sean Naman"
-keywords: ["salmon science", "1-Conservation and stewardship", "Freshwater ecosystems and stressors", "Ecosystem Sciences (ESD)", "Freshwater Ecosystems"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Sean Naman  
 **Division:** Ecosystem Sciences (ESD)  
