--- a/pages/2426.qmd
+++ b/pages/2426.qmd
@@ -2,10 +2,9 @@
 title: "Sakinaw Sockeye Juvenile Research on Measures to Increase Marine Survival"
 description: "Marine survival is a limiting factor for the endangered Sakinaw Lake sockeye smolts who migrate past hundreds of harbour seals at Hodgson Islands in the Strait of Georgia every spring. This salmon tracking study traps and PIT tags up to 2,500 sockeye smolts at a smolt fence, then transports the sockeye by boat past the seal colony and compares the survival rate of transported sockeye to naturally migrating smolts."
 author: "Kevin Pellett, Nicolette Watson, Karalea Filipovic"
-keywords: ["salmon science", "1-Conservation and stewardship", "Marine ecosystems and stressors", "Stock Assessment and Research (StAR)", "South Coast Area Salmon Stock Assessment"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Kevin Pellett, Nicolette Watson, Karalea Filipovic  
 **Division:** Stock Assessment and Research (StAR)  
