--- a/pages/2444.qmd
+++ b/pages/2444.qmd
@@ -2,10 +2,9 @@
 title: "Assessment of the distribution and abundance of juvenile Chinook salmon in the lower Thompson River basin."
 description: "Historic flooding in 2021 impacted salmon spawning and rearing habitat throughout the lower Thompson River and tributaries. This salmon population monitoring study counts juvenile Chinook (night snorkel surveys) in the lower Thompson mainstem and tributaries and compare to previous years to assess the population and habitat recovery."
 author: "Lauren Weir"
-keywords: ["salmon science", "1-Conservation and stewardship", "Salmon population monitoring and assessment", "Stock Assessment and Research (StAR)", "Fraser and Interior Area Salmon Stock Assessment"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Lauren Weir  
 **Division:** Stock Assessment and Research (StAR)  
