--- a/pages/2540.qmd
+++ b/pages/2540.qmd
@@ -2,10 +2,9 @@
 title: "Modelling to Support Annual Fraser River Sockeye and Pink Salmon Forecasts"
 description: "No description available."
 author: "Stephen Page, Richard Thomson"
-keywords: ["salmon science", "Unspecified", "Uncategorized", "Ocean Sciences (OSD)", "State of the Ocean"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Stephen Page, Richard Thomson  
 **Division:** Ocean Sciences (OSD)  
