--- a/pages/2399.qmd
+++ b/pages/2399.qmd
@@ -2,10 +2,9 @@
 title: "Risk Assessment Method for Salmon – Development for Regional Implementation"
 description: "Researchers in 2010 developed a tool called the Risk Assessment Method for Salmon that uses population and ecosystem information to identify and prioritize salmon population bottlenecks at different life stages. The tool constantly evolves, but currently uses awkward technology and lacks marine information. This stock management support project updates regional salmon information including marine and freshwater life stage information and converts the old Excel program to a more visual and user-friendly R programming design."
 author: "Christina Czembor"
-keywords: ["salmon science", "1-Conservation and stewardship", "Uncategorized", "Regional Director's Office", "Regional Director's Office"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Christina Czembor  
 **Division:** Regional Director's Office  
