--- a/pages/2412.qmd
+++ b/pages/2412.qmd
@@ -2,10 +2,9 @@
 title: "Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species"
 description: "Ocean warming and acidic upwelling changes the zooplankton food web for young salmon in the Northeast Pacific. This project measures the survival and nutritional value of pteropods (zooplankton) under different temperatures and acidic conditions in a lab. Researchers then compare lab findings to natural zooplankton conditions."
 author: "Chris Pearce"
-keywords: ["salmon science", "1-Conservation and stewardship", "Marine ecosystems and stressors", "Ecosystem Sciences (ESD)", "Nearshore Ecosystems"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Chris Pearce  
 **Division:** Ecosystem Sciences (ESD)  
