--- a/pages/2415.qmd
+++ b/pages/2415.qmd
@@ -2,10 +2,9 @@
 title: "A Decision Support Framework for Identifying and Characterizing the Non-fishing Threats to Pacific Salmon"
 description: "No description available."
 author: "Thomas Therriault, Cher LaCoste"
-keywords: ["salmon science", "Unspecified", "Uncategorized", "Ecosystem Sciences (ESD)", "Nearshore Ecosystems"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Thomas Therriault, Cher LaCoste  
 **Division:** Ecosystem Sciences (ESD)  
