--- a/pages/2416.qmd
+++ b/pages/2416.qmd
@@ -3,10 +3,9 @@ title: "Monitoring and predicting the exposure of Pacific salmon to harmful alga
 description: "Pacific salmon in Barkley Sound may be exposed to high levels of harmful algal biotoxins in the fall. Biotoxins have been detected in gill tissue from Chinook salmon collected in Barkley Sound.
 We are comparing biotoxin levels with environmental conditions and indicators of fish health."
 author: "Andrew Ross"
-keywords: ["salmon science", "1-Conservation and stewardship", "Marine ecosystems and stressors", "Ocean Sciences (OSD)", "Ecology and Biogeochemistry"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Andrew Ross  
 **Division:** Ocean Sciences (OSD)  
