--- a/pages/2427.qmd
+++ b/pages/2427.qmd
@@ -2,10 +2,9 @@
 title: "Salish Sea plankton and oceanography"
 description: "Zooplankton monitoring in the Strait of Georgia is important to understand the food web and juvenile salmon survival, but the current monthly sampling timing is too low for confident statistics and modelling. This food web monitoring study collects zooplankton and ocean conditions on bi-weekly surveys in the spring and fall to more confidently model salmon diet and health."
 author: "Akash Sastri, Kelly Young"
-keywords: ["salmon science", "1-Conservation and stewardship", "Marine ecosystems and stressors", "Ocean Sciences (OSD)", "Ecology and Biogeochemistry"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Akash Sastri, Kelly Young  
 **Division:** Ocean Sciences (OSD)  
