--- a/pages/2432.qmd
+++ b/pages/2432.qmd
@@ -2,10 +2,9 @@
 title: "Barkley Sound and Clayoquot Sound acoustic monitoring of salmon and salmon prey"
 description: "Acoustic tools can provide important information on salmon ecology (food web) and salmon survival in marine areas. These salmon habitat and abundance monitoring studies use multi-frequency echosounders from mooring stations and mobile units in West Coast Vancouver Island sounds and the Salish sea to measure aspects of salmon forage species (zooplankton, krill, and Pacific herring) and count juvenile and adult salmon along their migration."
 author: "Stephane Gauthier"
-keywords: ["salmon science", "1-Conservation and stewardship", "Marine ecosystems and stressors", "Ocean Sciences (OSD)", "Ecology and Biogeochemistry"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Stephane Gauthier  
 **Division:** Ocean Sciences (OSD)  
