--- a/pages/2437.qmd
+++ b/pages/2437.qmd
@@ -2,10 +2,9 @@
 title: "Adaptive genetic variation and climate change resilience in Canadian Pacific salmon"
 description: "Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections."
 author: "Eric Rondeau, Tim Healy, Kyle Wellband"
-keywords: ["salmon science", "1-Conservation and stewardship", "Salmon in a changing climate", "Aquatic Diagnostics, Genomics and Technology (ADGT)", "Molecular Genetics"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
 **Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
