--- a/pages/2449.qmd
+++ b/pages/2449.qmd
@@ -2,10 +2,9 @@
 title: "A decision-support tool that considers harvest, hatchery, and habitat management levers to support implementation of the Fisheries Act for Pacific salmon"
 description: "Resource managers rely on decision modelling tool and programs to predict the outcomes from different actions. For salmon management, often these tools fail to include hatchery or habitat parameters. This decision-support project develops an open source, single-population prototype model that can be applied to West Coast Vancouver Island Chinook as a case study, including hatchery and habitat levers, as well as, uncertainty and risk."
 author: "Carrie Holt, Brendan Connors, Catarina Wor"
-keywords: ["salmon science", "1-Conservation and stewardship", "Modelling and decision support", "Stock Assessment and Research (StAR)", "Quantitative Assessment Methods"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Carrie Holt, Brendan Connors, Catarina Wor  
 **Division:** Stock Assessment and Research (StAR)  
