--- a/pages/2453.qmd
+++ b/pages/2453.qmd
@@ -2,10 +2,9 @@
 title: "Epigenetic variation between hatchery- and natural-origin Canadian Chinook Salmon"
 description: "There are few genetic differences between hatchery-bred and natural salmon in populations enhanced by the Salmonid Enhancement Program (SEP), but structural modifications to genes may affect gene expression and impact salmon fitness in the wild. This genetic sequencing study gathers Chinook samples from hatcheries at the Nicola, Quinsam, Sarita, Atnarko, and Chilliwack rivers to compare epigenetic (methylation) differences between hatchery and wild Chinook to better monitor the proportion of hatchery salmon in a river."
 author: "Eric Rondeau, Tim Healy, Kyle Wellband"
-keywords: ["salmon science", "2-Salmon enhancement", "Genetics and adaptation", "Aquatic Diagnostics, Genomics and Technology (ADGT)", "Molecular Genetics"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Eric Rondeau, Tim Healy, Kyle Wellband  
 **Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
