--- a/pages/2534.qmd
+++ b/pages/2534.qmd
@@ -2,10 +2,9 @@
 title: "Understanding the impact of Arctic outflow winds on British Columbia fjords."
 description: "Arctic air masses move from the interior to coastal inlets, cooling and adding oxygen to the marine habitat. Fjords where this cooling occurs can become a marine refuge for salmon. This project monitors climate conditions in BC mainland fjords to measure the impact on salmon habitat and study how these factors may impact other coastal inlets."
 author: "Jennifer Jackson"
-keywords: ["salmon science", "1-Conservation and stewardship", "Marine ecosystems and stressors", "Ocean Sciences (OSD)", "Ecology and Biogeochemistry"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Jennifer Jackson  
 **Division:** Ocean Sciences (OSD)  
