--- a/pages/2539.qmd
+++ b/pages/2539.qmd
@@ -2,10 +2,9 @@
 title: "Climate Downscaling for salmon conservation in Marine Ecosystems"
 description: "Ocean and climate conditions influence salmon numbers and health. While efforts have been made to model future climate conditions, these models are broad in scope which creates a scale gap when applying projections to salmon habitat. This modelling project downscales broader global climate models to include coastal environments and salmon species distribution."
 author: "Di Wan, James Christian"
-keywords: ["salmon science", "1-Conservation and stewardship", "Salmon in a changing climate", "Ocean Sciences (OSD)", "Ocean Modelling and Prediction"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Di Wan, James Christian  
 **Division:** Ocean Sciences (OSD)  
