--- a/pages/2545.qmd
+++ b/pages/2545.qmd
@@ -2,10 +2,9 @@
 title: "Genetics Stock Identification and Parentage Based Tagging of Pacific salmon"
 description: "No description available."
 author: "Eric Rondeau"
-keywords: ["salmon science", "2-Salmon enhancement", "Uncategorized", "Aquatic Diagnostics, Genomics and Technology (ADGT)", "Molecular Genetics"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Eric Rondeau  
 **Division:** Aquatic Diagnostics, Genomics and Technology (ADGT)  
