--- a/pages/2547.qmd
+++ b/pages/2547.qmd
@@ -2,10 +2,9 @@
 title: "Fishery & Assessment Data Section - Knowledge Mobilization Unit"
 description: "No description available."
 author: "Shelee Hamilton, Tom Bird"
-keywords: ["salmon science", "Unspecified", "Modelling and decision support", "Stock Assessment and Research (StAR)", "Fishery and Assessment Data"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Shelee Hamilton, Tom Bird  
 **Division:** Stock Assessment and Research (StAR)  
