--- a/pages/2562.qmd
+++ b/pages/2562.qmd
@@ -2,10 +2,9 @@
 title: "Climate Change Vulnerability Assessments"
 description: "No description available."
 author: "Sue Grant"
-keywords: ["salmon science", "Unspecified", "Uncategorized", "Ecosystem Sciences (ESD)", "Regional Ecosystems Effects on Fish and Fisheries"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Sue Grant  
 **Division:** Ecosystem Sciences (ESD)  
