--- a/pages/2563.qmd
+++ b/pages/2563.qmd
@@ -2,10 +2,9 @@
 title: "Salmon Scanner and composite status data sets"
 description: "No description available."
 author: "Sue Grant"
-keywords: ["salmon science", "Unspecified", "Uncategorized", "Ecosystem Sciences (ESD)", "Regional Ecosystems Effects on Fish and Fisheries"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Sue Grant  
 **Division:** Ecosystem Sciences (ESD)  
