--- a/pages/2572.qmd
+++ b/pages/2572.qmd
@@ -2,10 +2,9 @@
 title: "Assessing Salinity Alteration of Nursery Conditions for Salmon Smolts following Construction of Roberts Bank Terminal-2"
 description: "No description available."
 author: "Terri Sutherland"
-keywords: ["salmon science", "Unspecified", "Uncategorized", "Ecosystem Sciences (ESD)", "Nearshore Ecosystems"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Terri Sutherland  
 **Division:** Ecosystem Sciences (ESD)  
