--- a/pages/3104.qmd
+++ b/pages/3104.qmd
@@ -2,10 +2,9 @@
 title: "Establishing a feed assessment program in Pacific salmon enhancement hatcheries"
 description: "No description available."
 author: "Ian Forster"
-keywords: ["salmon science", "Unspecified", "Hatchery science", "N/A", "Nearshore Ecosystems"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Ian Forster  
 **Division:** N/A  
