--- a/pages/3119.qmd
+++ b/pages/3119.qmd
@@ -2,10 +2,9 @@
 title: "Genomic consequences of stray hatchery introgression"
 description: "No description available."
 author: "Eric Rondeau, Timothy Healy, Kyle Wellband"
-keywords: ["salmon science", "Unspecified", "Hatchery science", "N/A", "Molecular Genetics"]
 ---
 
-## 🧬 Project Summary
+## 📋 Project Summary
 
 **Lead(s):** Eric Rondeau, Timothy Healy, Kyle Wellband  
 **Division:** N/A  
