--- a/pages/2397.qmd
+++ b/pages/2397.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Follow the Fish  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Carrie Holt  
-**Hosts:** Jessy Bokvist  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Neil Dangerfield; Andrew Ross; Jessy Bokvist  
 
 **Overview:**  
 Indigenous knowledge includes countless generations of place-based Pacific salmon experience that cannot be recreated or measured. Guided by the Eptuaptmumk (“Two-Eyed Seeing”) framework, we are partnering with First Nations on the West coast of Vancouver Island (WCVI) and University of Victoria to identify rebuilding targets and reference points for Chinook salmon that pair Indigenous Knowledge Systems with Western Science, based on interviews and focus groups with Indigenous Knowledge holders and a review of assessment literature.   
