--- a/pages/2408.qmd
+++ b/pages/2408.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon Health  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Amy Long  
-**Hosts:** Alison Krimmer  
+**Hosts:** Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alison Krimmer  
 
 **Overview:**  
 Salmon disease testing methods have greatly expanded in the last decade resulting in increased accuracy and decreased turnaround time; implementation of these tests will increase the Finfish Diagnostic Laboratory’s diagnostic capacity. This hatchery lab project collects tissue samples from broodstock and young salmon to confirm new methods are sensitive and specific to pathogens of interest. Once validated, these tests will be used by the Finfish Diagnostic Laboratory.   
