--- a/pages/2416.qmd
+++ b/pages/2416.qmd
@@ -15,7 +15,7 @@ toc: true
 **Session:** Marine stressors  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Andrew Ross  
-**Hosts:** Strahan Tucker  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; Strahan Tucker  
 
 **Overview:**  
 Pacific salmon in Barkley Sound may be exposed to high levels of harmful algal biotoxins in the fall. Biotoxins have been detected in gill tissue from Chinook salmon collected in Barkley Sound.
