--- a/pages/2425.qmd
+++ b/pages/2425.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Freshwater stressors  
 **Presentation Date:** February 04, 2024  
 **Speakers:** Josie Iacarella  
-**Hosts:** Sean Naman  
+**Hosts:** Joe Enns; Dave Patterson; Sean Naman  
 
 **Overview:**  
 Identifying individual and cumulative threats to salmon and their habitat is critical for effective management and restoration actions. This project estimates and maps nine human activities and landscape disturbance-based threats and four climate change-based threats for the stream network in the Fraser Basin. Results identify threat levels across salmon Conservation Units and the human activities and land uses that contributed most to threats.   
