--- a/pages/2398.qmd
+++ b/pages/2398.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Follow the Fish  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Diana McHugh  
-**Hosts:** Jessy Bokvist  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Neil Dangerfield; Andrew Ross; Jessy Bokvist  
 
 **Overview:**  
 Climate change influences freshwater flows and sediment movement during the salmon egg incubation stage. Frequent high-severity flows can impact egg survival rates due to redd scour events and sediment deposition. This research develops and assesses methods for measuring redd scour and sediment deposition that may impacts redds to inform salmon habitat restoration, enhancement, and rebuilding efforts.   
