--- a/pages/2402.qmd
+++ b/pages/2402.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Freshwater stressors  
 **Presentation Date:** February 04, 2024  
 **Speakers:** Brendan Connors, Adam O'Dell  
-**Hosts:** Sean Naman  
+**Hosts:** Joe Enns; Dave Patterson; Sean Naman  
 
 **Overview:**  
 Yukon River Chinook numbers have been declining and a questionable proportion of returning adults do not migrate past the border between Alaska and Canada. This transboundary tracking study uses radio-telemetry from towers and arial surveys to expand Alaska’s Chinook tagging efforts and locate the area and cause of the drop in numbers using death rate, migration speed, and timing.   
