--- a/pages/2404.qmd
+++ b/pages/2404.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Marine stressors  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Laura Bianucci  
-**Hosts:** Strahan Tucker  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; Strahan Tucker  
 
 **Overview:**  
 Low-oxygen (hypoxia) conditions have been observed near the surface in salmon migration inlets on west coast Vancouver Island. The ecosystem monitoring component of this study measures salinity, temperature, and oxygen at different depths in Clayoquot Sound fjords in collaboration with Indigenous groups to establish present-day baseline conditions. The modelling component helps understand the drivers of hypoxia and how they may change in the future. Will salmon have to face more or less hypoxic conditions while migrating?   
