--- a/pages/2407.qmd
+++ b/pages/2407.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Follow the Fish  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Jessy Bokvist  
-**Hosts:** Jessy Bokvist  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Neil Dangerfield; Andrew Ross; Jessy Bokvist  
 
 **Overview:**  
 Juvenile Chinook salmon utilize nearshore marine ecosystems along the West Coast during their first marine year. This monitoring project samples juvenile Chinook during year-round salmon surveys in estuarine and marine waters along the WCVI. Researchers are characterizing fish distribution and health (condition, diet, growth) to understanding what factors may be limiting early marine survival.   
