--- a/pages/2409.qmd
+++ b/pages/2409.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Marine stressors  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Strahan Tucker, Cameron Freshwater  
-**Hosts:** Strahan Tucker  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; Strahan Tucker  
 
 **Overview:**  
 Steller sea lions are hypothesized to feed on large numbers of adult Fraser River sockeye salmon when the salmon migrate past Triangle Island, near northern Vancouver Island. This project tags sockeye salmon and Steller sea lions, and also analyzes sea lion diets, to determine if the area is a survival bottleneck.   
