--- a/pages/2412.qmd
+++ b/pages/2412.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Marine stressors  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Chris Pearce  
-**Hosts:** Strahan Tucker  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; Strahan Tucker  
 
 **Overview:**  
 Ocean warming and acidic upwelling changes the zooplankton food web for young salmon in the Northeast Pacific. This project measures the survival and nutritional value of pteropods (zooplankton) under different temperatures and acidic conditions in a lab. Researchers then compare lab findings to natural zooplankton conditions.   
