--- a/pages/2413.qmd
+++ b/pages/2413.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Marine stressors  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Akash Sastri, Kelly Young  
-**Hosts:** Strahan Tucker  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Akash Sastri; Cameron Freshwater; Strahan Tucker  
 
 **Overview:**  
 Krill, a type of zooplankton, are a critical component of the marine food webs and important part of juvenile salmon diets. This ecosystem monitoring program collects krill on a monthly basis in two key feeding areas for early marine juvenile salmon along the west coast of Vancouver Island. We are monitoring how the amount and nutritional value (fats, protein and total energy) of krill varies with season and ocean conditions (temperature, salinity, and oxygen).   
