--- a/pages/2418.qmd
+++ b/pages/2418.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon Health  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Ian Forster, Cher LaCoste  
-**Hosts:** Alison Krimmer  
+**Hosts:** Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alison Krimmer  
 
 **Overview:**  
 Thiamine (vitamin B1) deficiency in salmon is diet-related and could be tied to warming oceans and changing food webs. The nutrient deficiency lowers the survival rate for salmon fry and has been observed in Yukon and California Chinook, but hasn’t been studied well in BC. This fish health monitoring study gathers Chinook tissue samples from the Albion test fishery and hatcheries to measure thiamine, fatty acids, and other health parameters to help predict and monitor vulnerable stocks.   
