--- a/pages/2421.qmd
+++ b/pages/2421.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon Health  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Stewart Johnson  
-**Hosts:** Alison Krimmer  
+**Hosts:** Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alison Krimmer  
 
 **Overview:**  
 Chronic stress impacts fish health and can be measured in salmon by sampling hormone (cortisol) and enzyme deposits in scales. This lab and hatchery study gathers coho and Chinook scale samples from broodstock surveys to develop methods of measuring chronic and acute stress hormone levels that could be expanded to monitor salmon health responses to stressors including climate change.   
