--- a/pages/2434.qmd
+++ b/pages/2434.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon Health  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
-**Hosts:** Alison Krimmer  
+**Hosts:** Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alison Krimmer  
 
 **Overview:**  
 Hatchery staff use genetic markers to tell the difference between summer and fall runs of Chinook in the Puntledge River to preserve genetic integrity. However, genetic tests can often be slow and only applied later. This salmon genetics pilot project assesses rapid, in-season testing where genetic marker information could be provided in under an hour.   
