--- a/pages/2435.qmd
+++ b/pages/2435.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Hatcheries  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
-**Hosts:** Kyle Wellband  
+**Hosts:** Cory Lagasse; Tim Healy; Eric Rondeau; Kyle Wellband  
 
 **Overview:**  
 Chemical reactions in a salmon body decide which genes are expressed in a process called “DNA methylation.” This hatchery genetics study sequences methylation across the genome to compare between hatchery and natural origin to see if salmon offspring inherit DNA methylation from parents (epigenetics) and how this could inform hatchery breeding methods.   
