--- a/pages/2437.qmd
+++ b/pages/2437.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon in a changing climate  
 **Presentation Date:** February 04, 2024  
 **Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
-**Hosts:** Patrick Thompson  
+**Hosts:** Cory Lagasse; Di Wan; Amber Holdsworth; Patrick Thompson  
 
 **Overview:**  
 Pacific salmon genetic markers are regularly used to manage fisheries and hatcheries. While these genetic analysis efforts provide important stock management information, they could also be used to assess diversity of salmon species relative to habitat changes. This salmon genetic adaptation study gathers Chinook and sockeye DNA samples and compares genomes to environmental conditions and climate projections.   
