--- a/pages/2443.qmd
+++ b/pages/2443.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Freshwater stressors  
 **Presentation Date:** February 04, 2024  
 **Speakers:** Daniel Doutaz  
-**Hosts:** Sean Naman  
+**Hosts:** Joe Enns; Dave Patterson; Sean Naman  
 
 **Overview:**  
 Introduced smallmouth bass pose a predation risk to sockeye in Cultus Lake. However, some anglers prefer fishing for smallmouth bass and strongly oppose actions to lower the bass population. This predator research study captures (electrofrishing), tags (PIT and acoustic transmitters), and biosamples smallmouth bass to assess population control methods and interviews anglers to develop a community plan.   
