--- a/pages/2447.qmd
+++ b/pages/2447.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Follow the Fish  
 **Presentation Date:** February 04, 2025  
 **Speakers:** Kristi Miller-Saunders  
-**Hosts:** Jessy Bokvist  
+**Hosts:** Isobel Pearsall; Nicholas Brown; Neil Dangerfield; Andrew Ross; Jessy Bokvist  
 
 **Overview:**  
 Salmon experience a variety of physiological stressors and pathogens over migration which can be monitored non-lethally using Fit-Chip technology. Chinook salmon will expose themselves to potentially impactful stressors to avail feeding opportunities, enhancing vulnerability to cumulative stressors. eDNA data resolves habitat usage for Chinook salmon and demonstrating they associate with high biomass areas (prey availability), including aquaculture facilities, and avoid harmful algae. Models addressing the cumulative and synergistic interplay between factors will inform which levers under human control will result in strongest outcomes for salmon.   
