--- a/pages/2448.qmd
+++ b/pages/2448.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon Health  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Kristi Miller-Saunders  
-**Hosts:** Alison Krimmer  
+**Hosts:** Joe Enns; Amy Long; Ian Forster; Christoph Deeg; Sydney Baxter; Alison Krimmer  
 
 **Overview:**  
 A proactive holistic health monitoring approach based on high throughput molecular technologies has been validated for utility in two salmon enhancement hatcheries, and is now ready for minimally invasive application in hatcheries culturing conservation stocks. The technical approach revealed annual shifts in stress, infection, and timing of smolt readiness. Future monitoring of pathogens in hatchery source water is crucial to minimize infection potential and maximize post-release survival in stocks of conservation concern.   
