--- a/pages/2453.qmd
+++ b/pages/2453.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Hatcheries  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
-**Hosts:** Kyle Wellband  
+**Hosts:** Cory Lagasse; Tim Healy; Eric Rondeau; Kyle Wellband  
 
 **Overview:**  
 There are few genetic differences between hatchery-bred and natural salmon in populations enhanced by the Salmonid Enhancement Program (SEP), but structural modifications to genes may affect gene expression and impact salmon fitness in the wild. This genetic sequencing study gathers Chinook samples from hatcheries at the Nicola, Quinsam, Sarita, Atnarko, and Chilliwack rivers to compare epigenetic (methylation) differences between hatchery and wild Chinook to better monitor the proportion of hatchery salmon in a river.   
