--- a/pages/2539.qmd
+++ b/pages/2539.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Salmon in a changing climate  
 **Presentation Date:** February 04, 2024  
 **Speakers:** Di Wan, James Christian  
-**Hosts:** Patrick Thompson  
+**Hosts:** Cory Lagasse; Di Wan; Amber Holdsworth; Patrick Thompson  
 
 **Overview:**  
 Ocean and climate conditions influence salmon numbers and health. While efforts have been made to model future climate conditions, these models are broad in scope which creates a scale gap when applying projections to salmon habitat. This modelling project downscales broader global climate models to include coastal environments and salmon species distribution.   
