--- a/pages/3119.qmd
+++ b/pages/3119.qmd
@@ -14,7 +14,7 @@ toc: true
 **Session:** Hatcheries  
 **Presentation Date:** February 04, 2031  
 **Speakers:** Eric Rondeau, Timothy Healy, Kyle Wellband  
-**Hosts:** Kyle Wellband  
+**Hosts:** Cory Lagasse; Tim Healy; Eric Rondeau; Kyle Wellband  
 
 **Overview:**  
 NA   
